# rp2040-zero-rs-template

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_and_test.yml
src/: main.rs
