[package]
name = "rp2040-zero-rs-template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rp2040-zero-rs-template" # src/main.rs
test = true
harness = false

[dependencies]
waveshare-rp2040-zero = "0.8.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.10.0"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt= "0.2.0"

# For RGB LED on RP2040-Zero board.
ws2812-pio = "0.8.0"
smart-leds = "0.3.0"

# [dev-dependencies]
# For running unit tests (and more) on the RP2040.
defmt = "0.3.8" # Dependency of `defmt-test`. Logging.
defmt-test = "0.3.2"
